Add async-storage and recipe services

--- a/src/app/cmps/recipe-list/recipe-list.component.html
+++ b/src/app/cmps/recipe-list/recipe-list.component.html
@@ -1,4 +1,3 @@
-<p>recipe-list works!</p>
 <section class="recipe-list">
-    <recipe-preview *ngFor="let recipe of recipes" [recipe]="recipe" />
+    <recipe-preview *ngFor="let recipe of recipes; trackBy: trackByFn" [recipe]="recipe" />
 </section>
