Enhance recipe-preview layout

--- a/src/app/assets/setup/_font.scss
+++ b/src/app/assets/setup/_font.scss
@@ -17,3 +17,8 @@
     font-family: 'Mukta-ExtraBold';
     src: url(/font/Mukta/Mukta-ExtraBold.ttf);
 }
+
+@font-face {
+    font-family: 'Parisienne';
+    src: url(/font/Parisienne/Parisienne-Regular.ttf);
+}
