--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -1,7 +1,9 @@
 <header class="header-container">
-    <h1 class="logo">Chef of Chief</h1>
+    <div class="header-logo-side">
+        <img src="/img/baker.png" />
+        <h1 class="logo">Chef of Chief</h1>
+    </div>
     <nav>
-        <a>Contacts</a>
         <a>Home</a>
         <a>About</a>
     </nav>
