--- a/src/app/cmps/recipe-preview/recipe-preview.component.scss
+++ b/src/app/cmps/recipe-preview/recipe-preview.component.scss
@@ -15,6 +15,18 @@
         align-items: center;
     }
 
+    .recipe-img-container {
+        display: flex;
+        width: 100%;
+        aspect-ratio: 3/4;
+
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
     .icons-area {
         display: flex;
         justify-content: space-between;
