--- a/src/app/assets/basics/_base.scss
+++ b/src/app/assets/basics/_base.scss
@@ -15,3 +15,13 @@ ul {
 img {
     display: block;
 }
+
+p {
+    margin: 0;
+
+    &.small-metadata {
+        font-family: 'Mukta-Light';
+        opacity: .6;
+        font-size: .9em;
+    }
+}
