--- a/src/app/cmps/recipe-preview/recipe-preview.component.scss
+++ b/src/app/cmps/recipe-preview/recipe-preview.component.scss
@@ -56,4 +56,11 @@
             font-family: 'Mukta-Medium';
         }
     }
+
+    .comments-viewing {
+        font-family: 'Mukta-Light';
+        opacity: .6;
+        font-size: .9em;
+
+    }
 }
