--- a/src/app/cmps/recipe-preview/recipe-preview.component.scss
+++ b/src/app/cmps/recipe-preview/recipe-preview.component.scss
@@ -58,9 +58,7 @@
     }
 
     .comments-viewing {
-        font-family: 'Mukta-Light';
-        opacity: .6;
-        font-size: .9em;
+        cursor: pointer;
 
     }
 }
