--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -4,7 +4,6 @@
         <h1 class="logo">Chef of Chief</h1>
     </div>
     <nav>
-        <a>Home</a>
-        <a>About</a>
+        <a>Log in</a>
     </nav>
 </header>
