--- a/src/app/cmps/comment/comment.component.html
+++ b/src/app/cmps/comment/comment.component.html
@@ -1,6 +1,9 @@
-<div>
-    <h3>Comments:</h3>
-    <ul>
-        <li *ngFor="let comment of comments">{{ comment.txt }}</li>
+<div class="comments-area">
+    <h3>Comments</h3>
+    <hr />
+    <ul class="comment-list">
+        <li *ngFor="let comment of comments">
+            <comment-preview [comment]="comment" />
+        </li>
     </ul>
 </div>
