Set up routing for the app

--- a/src/app/app-root/app.component.html
+++ b/src/app/app-root/app.component.html
@@ -1,5 +1,9 @@
 <main class="main-layout">
   <app-header />
-  <recipe-index />
+
+  <section>
+    <router-outlet />
+  </section>
+
   <app-footer />
 </main>
