--- a/src/app/cmps/recipe-preview/recipe-preview.component.html
+++ b/src/app/cmps/recipe-preview/recipe-preview.component.html
@@ -4,10 +4,10 @@
             <img src="{{recipe.by.imgUrl}}" class="user-img" />
             <span class="recipe-author">{{recipe.by.fullname}}</span>
         </div>
-        <span [innerHTML]="icons['more']" class="icon more-icon" routerLink="/edit/{{recipe._id}}"></span>
+        <span [innerHTML]="icons['more']" class="icon more-icon" (click)="openModal('actions')"></span>
     </div>
 
-    <div class="recipe-img-container">
+    <div class=" recipe-img-container">
         <img src="{{recipe.imgUrl}}" class="recipe-img" />
     </div>
 
