--- a/src/app/assets/basics/_base.scss
+++ b/src/app/assets/basics/_base.scss
@@ -1,3 +1,5 @@
+@import '../setup/mixin';
+
 html {
     font-family: 'Mukta-light';
 }
@@ -51,4 +53,27 @@ hr {
 
 .recipe-author {
     font-family: 'Mukta-Medium';
+}
+
+.btn {
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 0.3em;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    font-family: inherit;
+    font-size: 1rem;
+    cursor: pointer;
+
+    &-dark {
+        @include btn($type: dark);
+    }
+
+    &-light {
+        @include btn($type: light);
+    }
+
+    &-clear {
+        @include btn($type: 'clear');
+    }
 }
