--- a/src/app/pages/recipe-edit/recipe-edit.component.html
+++ b/src/app/pages/recipe-edit/recipe-edit.component.html
@@ -1,2 +1,18 @@
-<p>recipe-edit works!</p>
-<div>{{recipe.txt}}</div>
+<section class="recipe-edit recipe-preview">
+    <div class="recipe-preview-header">
+        <div class="edit-buttons">
+            <button class="btn btn-clear" (click)="onCancelEdit()">Cancel</button>
+            <button class="btn btn-clear" (click)="onSaveRecipe()">Done</button>
+        </div>
+        <div class="author-data">
+            <img src="{{recipe.by.imgUrl}}" class="user-img" />
+            <span class="recipe-author">{{recipe.by.fullname}}</span>
+        </div>
+    </div>
+
+    <div class=" recipe-img-container">
+        <img src="{{recipe.imgUrl}}" class="recipe-img" />
+    </div>
+
+    <input [(ngModel)]="recipe.txt" type="text" name="description" id="description" />
+</section>
