Set up for post creation

--- a/src/app/assets/basics/_base.scss
+++ b/src/app/assets/basics/_base.scss
@@ -51,6 +51,12 @@ hr {
     }
 }
 
+input {
+    &.file-input {
+        display: none;
+    }
+}
+
 .recipe-author {
     font-family: 'Mukta-Medium';
 }
