--- a/src/app/cmps/recipe-actions/recipe-actions.component.html
+++ b/src/app/cmps/recipe-actions/recipe-actions.component.html
@@ -1,2 +1,3 @@
-<p>recipe-actions works!</p>
-<div routerLink="/edit/{{recipeId}}">Edit</div>
+<section class="recipe-actions">
+    <div routerLink="/edit/{{recipeId}}">Edit</div>
+</section>
