--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,6 @@
 @import './app/assets/setup/font';
 @import './app/assets/setup/vars';
 @import './app/assets/setup/mixin';
+
+/*cmps*/
+@import './app/cmps/recipe-preview/recipe-preview.component';
