--- a/src/app/cmps/app-header/app-header.component.scss
+++ b/src/app/cmps/app-header/app-header.component.scss
@@ -2,8 +2,8 @@ header {
     height: 80px;
     display: flex;
     align-items: center;
-    padding: 0.5em 1.3em;
-    margin-bottom: 30px;
+    padding: 0 1.3em;
+    margin-bottom: 10px;
     font-size: 1.2em;
 
     .header-logo-side {
