--- a/src/app/cmps/recipe-preview/recipe-preview.component.scss
+++ b/src/app/cmps/recipe-preview/recipe-preview.component.scss
@@ -2,6 +2,7 @@
     display: grid;
     max-width: 500px;
     gap: 10px;
+    margin-block-end: 30px;
 
     .recipe-preview-header {
         display: flex;
