Replace the input element with cdkTextareaAutosize for auto-resizing

--- a/src/app/pages/recipe-edit/recipe-edit.component.html
+++ b/src/app/pages/recipe-edit/recipe-edit.component.html
@@ -26,5 +26,6 @@
         <img src="{{recipe.imgUrl}}" class="recipe-img" />
     </div>
 
-    <input [(ngModel)]="recipe.txt" type="text" name="description" id="description" />
+    <textarea cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"
+        placeholder="Type here..." [(ngModel)]="recipe.txt" class="description"></textarea>
 </section>
