--- a/src/app/assets/basics/_base.scss
+++ b/src/app/assets/basics/_base.scss
@@ -57,6 +57,17 @@ input {
     }
 }
 
+pre {
+    margin: 0;
+    font-family: inherit;
+}
+
+textarea {
+    border: none;
+    font-family: inherit;
+    padding-inline-start: .5em;
+}
+
 .recipe-author {
     font-family: 'Mukta-Medium';
 }
