Enable adding emoji to comments

--- a/src/app/assets/setup/_vars.scss
+++ b/src/app/assets/setup/_vars.scss
@@ -4,3 +4,9 @@ $clr-bg-3: whitesmoke;
 
 $clr-border-1: #c7c7c7;
 $clr-delete: #c9372c;
+
+
+$mobile-breakpoint: 460px;
+$narrow-breakpoint: 720px;
+$normal-breakpoint: 960px;
+$large-breakpoint: 1200px;
