--- a/src/app/assets/setup/_mixin.scss
+++ b/src/app/assets/setup/_mixin.scss
@@ -37,3 +37,33 @@
         }
     }
 }
+
+@mixin for-mobile-layout {
+    @media (max-width: calc($mobile-breakpoint + 40px)) {
+        @content;
+    }
+}
+
+@mixin for-narrow-layout {
+    @media (min-width: calc($mobile-breakpoint + 40px)) {
+        @content;
+    }
+}
+
+@mixin for-normal-layout {
+    @media (min-width: calc($narrow-breakpoint + 40px)) {
+        @content;
+    }
+}
+
+@mixin for-wide-layout {
+    @media (min-width: calc($normal-breakpoint + 40px)) {
+        @content;
+    }
+}
+
+@mixin for-large-layout {
+    @media (min-width: calc($large-breakpoint)) {
+        @content;
+    }
+}
