--- a/src/app/cmps/comment/comment.component.html
+++ b/src/app/cmps/comment/comment.component.html
@@ -3,7 +3,7 @@
     <hr />
     <div class="comments-area-content">
         <ul class="comment-list">
-            <li *ngFor="let comment of comments">
+            <li *ngFor="let comment of commentsList">
                 <comment-preview [comment]="comment" />
             </li>
         </ul>
