Implement onToggleLike() to enable liking a post

--- a/src/app/cmps/recipe-preview/recipe-preview.component.html
+++ b/src/app/cmps/recipe-preview/recipe-preview.component.html
@@ -14,7 +14,8 @@
     <div class="icons-area">
         <div class="right-icons">
             <div>
-                <span [innerHTML]="icons['heart']" class="icon"></span>
+                <span [innerHTML]="likedByLoggedInUser ? icons['fullHeart'] : icons['heart']" class="icon"
+                    (click)="onToggleLike()"></span>
                 <span>{{recipe.likedBy.length}}</span>
             </div>
             <div>
