Implement onToggleSavedRecipe() to enable saving post

--- a/src/app/cmps/recipe-preview/recipe-preview.component.html
+++ b/src/app/cmps/recipe-preview/recipe-preview.component.html
@@ -23,7 +23,8 @@
                 <span>{{recipe.comments.length}}</span>
             </div>
         </div>
-        <span [innerHTML]="icons['save']" class="icon"></span>
+        <span [innerHTML]="savedByLoggedInUser ? icons['saved'] : icons['save']" class="icon"
+            (click)="onToggleSavedRecipe()"></span>
     </div>
 
     <div class="recipe-metadata">
