--- a/src/app/cmps/app-footer/app-footer.component.html
+++ b/src/app/cmps/app-footer/app-footer.component.html
@@ -1,8 +1,9 @@
 <footer class="app-footer">
     <div class="footer-actions">
-        <span [innerHTML]="icons['home']" class="icon"></span>
+        <span [innerHTML]="routeType === 'home' ? icons['homeFull'] : icons['home']" class="icon" routerLink="/"></span>
         <span [innerHTML]="icons['search']" class="icon"></span>
-        <span [innerHTML]="icons['create']" class="icon" routerLink="/edit"></span>
-        <img *ngIf="loggedInUser$ | async as user" [src]="user.imgUrl" class="user-img" />
+        <span [innerHTML]="routeType === 'edit' ? icons['createFull'] : icons['create']" class="icon"
+            routerLink="/edit"></span>
+        <img *ngIf="loggedInUser$ | async as user" [src]="user.imgUrl" class="user-img" routerLink="/feed/123" />
     </div>
 </footer>
