Implement feed-header component

--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -1,6 +1,6 @@
 <header class="header-container">
     <div class="header-logo-side">
-        <img src="/img/baker.png" />
+        <!-- <img src="/img/baker.png" /> -->
         <h1 class="logo">Chef of Chief</h1>
     </div>
     <nav>
