--- a/src/app/assets/basics/_base.scss
+++ b/src/app/assets/basics/_base.scss
@@ -22,6 +22,10 @@ img {
         height: 30px;
         border-radius: 50%;
         aspect-ratio: 1/1;
+
+        .feed-header & {
+            height: 80px;
+        }
     }
 }
 
