Remove loggedInUser subscription from RecipePreview and pass it as a prop from RecipeIndex

--- a/src/app/cmps/recipe-list/recipe-list.component.html
+++ b/src/app/cmps/recipe-list/recipe-list.component.html
@@ -1,3 +1,4 @@
 <section class="recipe-list">
-    <recipe-preview *ngFor="let recipe of recipes; trackBy: trackByFn" [recipe]="recipe" />
+    <recipe-preview *ngFor="let recipe of recipes; trackBy: trackByFn" [recipe]="recipe"
+        [loggedInUser]="loggedInUser" />
 </section>
