--- a/src/app/cmps/app-header/app-header.component.scss
+++ b/src/app/cmps/app-header/app-header.component.scss
@@ -2,7 +2,7 @@ header {
     height: 80px;
     display: flex;
     align-items: center;
-    padding: 0 1.3em;
+    padding: 0 .8em;
     margin-bottom: 10px;
     font-size: 1.2em;
 
