Handle case of null in loggedInUser

--- a/src/app/cmps/feed-cmps/feed-header/feed-header.component.html
+++ b/src/app/cmps/feed-cmps/feed-header/feed-header.component.html
@@ -5,7 +5,7 @@
             <div class="user-fullname">{{data.user?.fullname}}</div>
             <div class="numerical-data">
                 <div class="posts-number">
-                    <span class="number">{{ data.recipes?.length }}</span>
+                    <span class="number">{{ data.user?.myRecipes?.length }}</span>
                     <span>posts</span>
                 </div>
                 <div class="followers-number">
