--- a/src/app/cmps/recipe-list/recipe-list.component.html
+++ b/src/app/cmps/recipe-list/recipe-list.component.html
@@ -1,4 +1,4 @@
-<section class="recipe-list">
+<section *ngIf="loggedInUser" class="recipe-list">
     <recipe-preview *ngFor="let recipe of recipes; trackBy: trackByFn" [recipe]="recipe"
         [loggedInUser]="loggedInUser" />
 </section>
