Add styling to feed-cmp

--- a/src/app/cmps/feed-cmps/feed-post-list/feed-post-list.component.html
+++ b/src/app/cmps/feed-cmps/feed-post-list/feed-post-list.component.html
@@ -1,3 +1,5 @@
-<section class="post-list">
-    <img [src]="post.imgUrl" />
-</section>
+<ng-container>
+    <div class="post-img">
+        <img [src]="post.imgUrl" />
+    </div>
+</ng-container>
