--- a/src/app/cmps/feed-cmps/feed-post-list/feed-post-list.component.scss
+++ b/src/app/cmps/feed-cmps/feed-post-list/feed-post-list.component.scss
@@ -1,5 +1,8 @@
-.post-list {
-    display: grid;
-    grid-template-columns: 200px 200px 200px;
-    margin-block-start: 2em;
+@import '../../../assets/setup/mixin';
+
+.post-img {
+    display: flex;
+    width: 100%;
+    aspect-ratio: 3/4;
+    cursor: pointer;
 }
